[project]
name = "sse-proxy-python-example"
version = "0.1.0"
description = "Python implementation example of an SSE proxy for streaming API responses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.50.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.14.2",
  "uvicorn[standard]>=0.30.0"
]

[dependency-groups]
dev = [
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]

[project.scripts]
sse-proxy = "sse_proxy_python_example.main:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "error"
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
